# TranslatorAI

./: .gitignore  Makefile  extract_text.py  langraph_poc.ipynb  prompts.py  pyproject.toml  translator_chain.py
DL_Agent_Course/: Lesson 2 - LangGraph Components.ipynb
backend/: main.py
frontend/: package-lock.json
frontend/src/: App.js  EmailGenerator.js  EmailGenerator_nonstream.js  EmailGenerator_simple_stream.js
